# bqcsv

./: .gitignore  README.md  pyproject.toml
bqcsv/: cli.py  config.py  table.py
src/: cli.py  schema.py  table.py  uploader.py
tests/: test.csv  test_cli.py  test_comma.csv  test_semicolon.csv  test_uploader.py
upload_bq_dataset/: cli.py  config.py  uploader.py
