[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bqcsv"
version = "1.0.0"
description = "Upload a local CSV file to a BigQuery table via the bq CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0",
    "pandas>=2.0",
]

[project.scripts]
bqcsv = "src.cli:main"

[tool.setuptools]
packages = ["bqcsv"]

[tool.setuptools.package-dir]
bqcsv = "src"
